<resources>
    <string name="app_name">CoolDemo</string>

    <string name="take_photo">Take photo</string>
    <string name="record_start">Start record</string>
    <string name="record_stop">Stop record</string>
    <string name="ff_info">ffmpeg info</string>
    <string name="mock_video">Mock stream</string>
    <string name="mock_video2">Mock stream2</string>
    <string name="hw_decode">HW Decode</string>

    <string name="fpv_communication">FPV Communication</string>
    <string name="fpv_power">FPV Power</string>
    <string name="ota_ground">V2 Gnd OTA</string>
    <string name="ota_sky">V2 Sky OTA</string>
    <string name="ota_v3">V3 OTA</string>
    <string name="pair_v4">V4 Pair</string>
    <string name="chaninfo_v4">V4 chaninfo</string>
    <string name="bandwidth_v4">V4 bandwidth</string>
    <string name="config_v4">V4 config</string>
    <string name="passthrough_v4">V4 passthrough</string>
    <string name="switch_dev_v4">V4 switch dev</string>
    <string name="sysinfo_v4">V4 version</string>

    <string name="restart_to_work">It takes effect after restarting the APP</string>
    <string name="ok">OK</string>
    <string name="take_photo_success">Take pictures successfully</string>
    <string name="take_photo_fail">Failed to take pictures</string>
    <string name="take_photo_tip">Only system version >=N can take pictures in %s mode. Please use FF_GL_SURFACE mode</string>
    <string name="record_success">Recorded successfully</string>
    <string name="record_fail">Recording failed</string>
    <string name="record_ing">Currently recording</string>
    <string name="record_not_playing">Not currently playing</string>

    <string name="permission_tip">Tip</string>
    <string name="permission_msg">Current application lacks necessary permissions.

Please click "Settings" - "Permissions" - open the required permissions</string>
    <string name="permission_cancel">Cancel</string>
    <string name="permission_set">Set</string>

    <string name="ota_progress">Upgrade Progress</string>
    <string name="ota_start">Upgrade started</string>
    <string name="ota_resend">Resend: %d / %d</string>
    <string name="ota_ing">upgrading</string>
    <string name="ota_finish">Update completed</string>
    <string name="ota_fail">Upgrade failed</string>

    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="url_error">Video url error</string>
    <string name="surface_unavailable">Initialization not completed, please try again</string>
    <string name="sw_decode">Enter soft decoding mode %d</string>
    <string name="video_url">Video url</string>
    <string name="decode_mode_hw">HW</string>
    <string name="decode_mode_sw">SW</string>

    <string-array name="channel">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="dir_entries">
        <item>TX</item>
        <item>RX</item>
    </string-array>

    <string-array name="slot_entries">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>

    <string-array name="port_entries">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="socket_encrypt_mode">
        <item>default</item>
        <item>aes128</item>
        <item>aes256</item>
    </string-array>
</resources>