<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_blue"
    tools:context=".entry.P201Activity">

    <SurfaceView
        android:id="@+id/surface"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:translationZ="1px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextureView
        android:id="@+id/texture"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:translationZ="1px"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_bitrate_video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textColor="@android:color/holo_green_light"
        android:translationZ="1px"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="13 M/S" />

    <ScrollView
        android:id="@+id/sv_operate"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:translationZ="4px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="4dp">

            <Button
                android:id="@+id/btn_shot"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:onClick="onClick"
                android:text="@string/take_photo" />

            <Button
                android:id="@+id/btn_start_record"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:onClick="onClick"
                android:text="@string/record_start" />

            <Button
                android:id="@+id/btn_stop_record"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:onClick="onClick"
                android:text="@string/record_stop" />

            <Button
                android:id="@+id/btn_ff_info"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:onClick="onClick"
                android:text="@string/ff_info" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/sw_mock_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@android:color/white"
                android:text="@string/mock_video" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/sw_mock_video2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@android:color/white"
                android:text="@string/mock_video2" />

            <Spinner
                android:id="@+id/sp_decode_mode"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_marginTop="4dp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/sw_hw_decode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@android:color/white"
                android:text="@string/hw_decode" />

            <TextView
                android:id="@+id/tv_update_process"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@android:color/white"
                android:onClick="onClick"
                android:text="@string/ota_progress"
                android:textColor="@android:color/black"
                tools:text="50/66" />

            <Button
                android:id="@+id/btn_upgrade_gnd"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:onClick="onClick"
                android:text="@string/ota_ground" />

            <Button
                android:id="@+id/btn_upgrade_sky"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:onClick="onClick"
                android:text="@string/ota_sky" />

            <Button
                android:id="@+id/btn_config"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:onClick="onClick"
                android:text="Config" />

        </LinearLayout>
    </ScrollView>

    <SurfaceView
        android:id="@+id/surface2"
        android:layout_width="@dimen/video_2_width"
        android:layout_height="@dimen/video_2_height"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
