<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RtspSingleActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="4dp">

        <Spinner
            android:id="@+id/sp_codec"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginTop="4dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="port" />

        <EditText
            android:id="@+id/et_port"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:text="5600" />

        <TextView
            android:id="@+id/tv_operate"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:background="#00b0ff"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:text="@string/play"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_decode_mode"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@color/blue"
            android:textSize="14sp"
            tools:text="@string/decode_mode_hw" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/fl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black">

        <SurfaceView
            android:id="@+id/surface"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_shot"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:onClick="onClick"
                android:text="@string/take_photo" />

            <Button
                android:id="@+id/btn_start_record"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:onClick="onClick"
                android:text="@string/record_start" />

            <Button
                android:id="@+id/btn_stop_record"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:onClick="onClick"
                android:text="@string/record_stop" />

        </LinearLayout>
    </FrameLayout>
</LinearLayout>